# cmdlp

./: .clang-tidy  .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  README.md  _config.yml  index.html  index.md  mkdocs.yml
.cache/clangd/index/: option.hpp.276E015B63BE5B0C.idx  option_list.hpp.C3F641299ED5072B.idx  option_parser.hpp.4C0E75C818F04740.idx  test_cmdlp.cpp.A5922DD3FF7ACB7F.idx  tokenizer.hpp.2A7DDA394C659642.idx
.github/workflows/: documentation.yml  macos.yml  ubuntu.yml  windows.yml
docs/: index.md
examples/: example.cpp  example_help_formatting.cpp  example_positional.cpp
include/cmdlp/: cmdlp.hpp  option.hpp  option_list.hpp  option_parser.hpp  parser.hpp  tokenizer.hpp
include/cmdlp/detail/: option.hpp  option_list.hpp  tokenizer.hpp
search/: search_index.json
tests/: test_cmdlp.cpp  test_error_handling.cpp  test_multi_options.cpp  test_positional_options.cpp  test_toggle_options.cpp  test_value_options.cpp
